Update navigation links to include Minas Gerais and other locations

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,18 +26,17 @@ import HeaderLink from './HeaderLink.astro';
             <li><HeaderLink href="/transporte-com-escolta">Com Escolta</HeaderLink></li>
             <li><HeaderLink href="/retirada-cargas-excedentes-portos">Retirada em Portos</HeaderLink></li>
           </ul>
-        </li>
-        <li class="has-dropdown" tabindex="0" aria-haspopup="true" aria-expanded="false">
+        </li>        <li class="has-dropdown" tabindex="0" aria-haspopup="true" aria-expanded="false">
           <span>Locais</span>
           <ul class="dropdown" role="menu">
-            <li><HeaderLink href="/roteiros">Roteiros</HeaderLink></li>
+            <li><HeaderLink href="/roteiros">Todos os Roteiros</HeaderLink></li>
             <li><HeaderLink href="/locais/parana">Paraná</HeaderLink></li>
             <li><HeaderLink href="/locais/santa-catarina">Santa Catarina</HeaderLink></li>
             <li><HeaderLink href="/locais/rio-grande-do-sul">Rio Grande do Sul</HeaderLink></li>
             <li><HeaderLink href="/locais/sao-paulo">São Paulo</HeaderLink></li>
-            <li><HeaderLink href="/locais/goiania">Goiânia</HeaderLink></li>
-            <li><HeaderLink href="/locais/tres-lagoas">Três Lagoas</HeaderLink></li>
-            <!-- Adicione outros locais conforme necessário -->
+            <li><HeaderLink href="/locais/minas-gerais">Minas Gerais</HeaderLink></li>
+            <li><HeaderLink href="/locais/mato-grosso-do-sul">Mato Grosso do Sul</HeaderLink></li>
+            <li><HeaderLink href="/locais/goias">Goiás</HeaderLink></li>
           </ul>
         </li>
         <li><HeaderLink href="/solucoes">Soluções</HeaderLink></li>
@@ -78,16 +77,16 @@ import HeaderLink from './HeaderLink.astro';
             <li><HeaderLink href="/transporte-com-escolta">Com Escolta</HeaderLink></li>
             <li><HeaderLink href="/retirada-cargas-excedentes-portos">Retirada em Portos</HeaderLink></li>
           </ul>
-        </li>
-        <li><span>Locais</span>
+        </li>        <li><span>Locais</span>
           <ul>
-            <li><HeaderLink href="/roteiros">Roteiros</HeaderLink></li>
+            <li><HeaderLink href="/roteiros">Todos os Roteiros</HeaderLink></li>
             <li><HeaderLink href="/locais/parana">Paraná</HeaderLink></li>
             <li><HeaderLink href="/locais/santa-catarina">Santa Catarina</HeaderLink></li>
             <li><HeaderLink href="/locais/rio-grande-do-sul">Rio Grande do Sul</HeaderLink></li>
             <li><HeaderLink href="/locais/sao-paulo">São Paulo</HeaderLink></li>
-            <li><HeaderLink href="/locais/goiania">Goiânia</HeaderLink></li>
-            <li><HeaderLink href="/locais/tres-lagoas">Três Lagoas</HeaderLink></li>
+            <li><HeaderLink href="/locais/minas-gerais">Minas Gerais</HeaderLink></li>
+            <li><HeaderLink href="/locais/mato-grosso-do-sul">Mato Grosso do Sul</HeaderLink></li>
+            <li><HeaderLink href="/locais/goias">Goiás</HeaderLink></li>
           </ul>
         </li>
         <li><HeaderLink href="/solucoes">Soluções</HeaderLink></li>
